--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                       transition: all 0.3s;">
                 Subscribe for $5,000/year →
             </a>
-            <a href="mailto:contact@bearspray.ai?subject=Request%20Company%20Evaluation%20-%20%2410K&body=Hi%2C%0D%0A%0D%0AI%27d%20like%20to%20request%20an%20AI%20disruption%20risk%20evaluation%20for%20my%20company.%0D%0A%0D%0ACompany%20Name%3A%20%0D%0AContact%20Name%3A%20%0D%0AEmail%3A%20%0D%0APhone%3A%20%0D%0A%0D%0APlease%20send%20me%20information%20about%20the%20evaluation%20process.%0D%0A%0D%0AThank%20you"
+            <a href="mailto:john@bearspray.ai?subject=Request%20Company%20Evaluation%20-%20%2410K&body=Hi%2C%0D%0A%0D%0AI%27d%20like%20to%20request%20an%20AI%20disruption%20risk%20evaluation%20for%20my%20company.%0D%0A%0D%0ACompany%20Name%3A%20%0D%0AContact%20Name%3A%20%0D%0AEmail%3A%20%0D%0APhone%3A%20%0D%0A%0D%0APlease%20send%20me%20information%20about%20the%20evaluation%20process.%0D%0A%0D%0AThank%20you"
                target="_blank"
                rel="noopener noreferrer" 
                style="display: inline-block;
